<?xml version="1.0"?>
<package>
  <name>semantic_topic_tools</name>
  <version>0.1.0</version>
  <description>Tools for semantically handling messages according to different parameters and boundaries, e.g. to verify the maximum range of values.</description>

  <maintainer email="t.fromm@jacobs-university.de">Tobias Fromm</maintainer>

  <license>EUPL v1.2</license>

  <author email="t.fromm@jacobs-university.de">Tobias Fromm</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_srvs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>std_srvs</run_depend>
  
</package>
